# rosmsg_to_serializer

./: README.md
rosmsg_to_serializer/: CMakeLists.txt  package.xml  pyproject.toml  setup.py
rosmsg_to_serializer/cmake/: rosmsg_to_serializer.cmake  rosmsg_to_serializerConfig-version.cmake  rosmsg_to_serializerConfig.cmake
rosmsg_to_serializer/rosmsg_to_serializer/: __init__.py  __main__.py  rosmsg_to_serializer.py
rosmsg_to_serializer/rosmsg_to_serializer/module/: deserializer_template.py  dynamic_serializer_generator.py  dynamic_type_generator.py  serializer_template.py
rosmsg_to_serializer/rosmsg_to_serializer/templates/: deserializer.h.j2  serializer.h.j2
rosmsg_to_serializer_example/: CMakeLists.txt  package.xml
rosmsg_to_serializer_example/src/: serialize_header_example.c  serialize_image_example.c
