<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypealang="xml"?>
<package format="3">
  <name>rosmsg_to_serializer</name>
  <version>0.0.0</version>
  <description>Generate C/C++ serializers and deserializers from ROS2 message definitions dynamically.</description>

  <maintainer email="ray255@gmail.com">Ar-Ray-code</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>ament_cmake_python</depend>
  <exec_depend>python3-jinja2</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>